--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         }
                     } else {
                         // Handle errors from the backend
-                        console.log("Error fetching data from backend. Status:",xhr.responseText.Error)
+                        console.log("Error fetching data from backend. Status:",xhr.responseText.message)
                     }
                 }
             };
