--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
 
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === XMLHttpRequest.DONE) {
+                    const responseData = JSON.parse(xhr.responseText);
+                    console.log("Backend Response:", xhr.status);
                     if (xhr.status === 200) {
                         // Handle successful response from the backend
-                        const responseData = JSON.parse(xhr.responseText);
                         console.log("Backend Response:", responseData);
 
                         // Display success or error message to the user
-                        if (responseData.message) {
-                            alert(responseData.message);
-                        } else if (responseData.Error) {
-                            alert(responseData.Error);
-                        }
+                
+                        alert(responseData.message);
+                        
                     } else {
                         // Handle errors from the backend
-                        console.log("Error fetching data from backend. Status:",xhr.responseText.message)
+                        console.log("Error fetching data from backend. Status:",responseData.message)
+                        alert(responseData.message);
                     }
                 }
             };
